--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -49,7 +49,7 @@
 <header class="sticky top-0 z-50 backdrop-blur bg-zinc-900/80 border-b border-zinc-800">
   <div class="max-w-7xl mx-auto px-4 py-4 flex items-center justify-between gap-4">
 
-    <h1 class="text-2xl font-extrabold text-yellow-400">Django Blog</h1>
+    <h1 onclick="location.href='{% url 'homepage' %}'" class="text-2xl font-extrabold text-yellow-400">Django Blog</h1>
 
     <!-- Search -->
     <div class="hidden md:block relative w-full max-w-md">
@@ -67,10 +67,10 @@
     </div>
 
     <div class="flex gap-2">
-      <button class="px-4 py-1.5 text-sm rounded-full bg-zinc-800 hover:bg-zinc-700 transition">
+      <button class="px-4 py-1.5 text-sm rounded-full bg-zinc-800 hover:bg-zinc-700 transition" onclick="location.href='{% url 'signin' %}'">
         Login
       </button>
-      <button class="px-4 py-1.5 text-sm rounded-full bg-yellow-500 text-black hover:bg-yellow-400 transition">
+      <button class="px-4 py-1.5 text-sm rounded-full bg-yellow-500 text-black hover:bg-yellow-400 transition" onclick="location.href='{% url 'signup' %}'">
         Register
       </button>
     </div>
