click to open posts

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -29,8 +29,7 @@
             {{ form.password }}
         </div>
 
-        <button type="submit" onclick="location.href='{% url 'homepage' %} class="w-full bg-yellow-500 hover:bg-yellow-400 text-black font-bold py-3 rounded-lg transition-transform active:scale-95 shadow-[0_0_15px_rgba(234,179,8,0.3)] hover:shadow-[0_0_25px_rgba(234,179,8,0.5)]">
-            Sign In
+        <button type="submit" class="mt-2 w-full bg-yellow-500 hover:bg-yellow-400 text-black font-bold py-3 rounded-lg transition-transform active:scale-95 shadow-[0_0_15px_rgba(234,179,8,0.3)] hover:shadow-[0_0_25px_rgba(234,179,8,0.5)]">            Sign In
         </button>
 
         <div class="text-center mt-4">
