--- a/templates/base.html
+++ b/templates/base.html
@@ -25,11 +25,12 @@
       <p class="text-zinc-300 mb-6">
         {{ front.short_description | truncatewords:15 }}
       </p>
-      <a href="#"
-         class="inline-flex items-center gap-2 text-yellow-400 font-semibold
-                hover:gap-3 transition-all">
-        Continue reading →
+      <a class="inline-flex items-center gap-2 text-yellow-400 font-semibold
+                hover:gap-3 transition-all" href="{% url 'blogs' front.slug %}">continue reading...
       </a>
+         
+        
+      
       
     </div>
     {% endfor %}
@@ -46,8 +47,8 @@
   <div class="grid md:grid-cols-2 gap-12">
     {% for blog in featured_post %}
     <article class="animate-slide hover:translate-x-2 transition">
-      <h4 class="text-2xl font-bold mb-2 hover:text-yellow-400 transition">
-        {{ blog.title }}
+      <h4 class="text-2xl font-bold mb-2 hover:text-yellow-400 transition"> <a href="{% url 'blogs' blog.slug %}">{{ blog.title }}</a>
+        
       </h4>
       <p class="text-sm text-zinc-400 mb-3">{{ blog.created_at }} · {{ blog.author }}</p>
       <p class="text-zinc-300">
@@ -98,8 +99,8 @@
         class="h-44 w-full object-cover group-hover:scale-110 transition duration-700"
       />
       <div class="p-5">
-        <h4 class="font-bold text-lg mb-2 group-hover:text-yellow-400 transition">
-          {{ posts.title }}
+        <h4 class="font-bold text-lg mb-2 group-hover:text-yellow-400 transition"><a href="{% url 'blogs' posts.slug %}">{{ posts.title }}</a>
+          
         </h4>
         <p class="text-sm text-zinc-400">
           {{ posts.short_description | truncatewords:15  }}
